--- a/drivers/entropy/Kconfig
+++ b/drivers/entropy/Kconfig
@@ -22,6 +22,7 @@ config ENTROPY_INIT_PRIORITY
 
 source "drivers/entropy/Kconfig.b91"
 source "drivers/entropy/Kconfig.cc13xx_cc26xx"
+source "drivers/entropy/Kconfig.dummy"
 source "drivers/entropy/Kconfig.mcux"
 source "drivers/entropy/Kconfig.stm32"
 source "drivers/entropy/Kconfig.esp32"
