--- a/samples/bluetooth/hci_uart/prj.conf
+++ b/samples/bluetooth/hci_uart/prj.conf
@@ -1,6 +1,6 @@
-CONFIG_CONSOLE=n
-CONFIG_STDOUT_CONSOLE=n
-CONFIG_UART_CONSOLE=n
+# CONFIG_CONSOLE=n
+# CONFIG_STDOUT_CONSOLE=n
+# CONFIG_UART_CONSOLE=n
 CONFIG_GPIO=y
 CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
@@ -14,7 +14,7 @@ CONFIG_BT_BUF_EVT_DISCARDABLE_SIZE=255
 CONFIG_BT_CTLR_ASSERT_HANDLER=y
 CONFIG_BT_MAX_CONN=16
 CONFIG_BT_TINYCRYPT_ECC=n
-CONFIG_BT_CTLR_DTM_HCI=y
+# CONFIG_BT_CTLR_DTM_HCI=y
 
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=512
 
