--- a/samples/bluetooth/hci_uart_async/prj.conf
+++ b/samples/bluetooth/hci_uart_async/prj.conf
@@ -22,4 +22,64 @@ CONFIG_BT_BUF_EVT_DISCARDABLE_SIZE=255
 # See `overlay.app`. The 'zephyr,console' chosen node is deleted there
 # in case it has a interfering default. Those same boards set this
 # config and it must be undone or the build will fail.
-CONFIG_UART_CONSOLE=n
+# CONFIG_UART_CONSOLE=n
+CONFIG_BT_CTLR_ASSERT_HANDLER=n
+CONFIG_BT_MAX_CONN=16
+CONFIG_BT_TINYCRYPT_ECC=n
+# CONFIG_BT_CTLR_DTM_HCI=y
+
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=512
+
+# Workaround: Unable to allocate command buffer when using K_NO_WAIT since
+# Host number of completed commands does not follow normal flow control.
+CONFIG_BT_BUF_CMD_TX_COUNT=10
+
+
+CONFIG_BT_BUF_ACL_RX_COUNT=2
+CONFIG_BT_BUF_ACL_TX_COUNT=3
+# BT_BUF_ACL_RX_SIZE: 258 = 255(max report size) + 2 (HCI header) + 1(H4 header)
+CONFIG_BT_BUF_ACL_RX_SIZE=258
+CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
+CONFIG_BT_BUF_ACL_TX_SIZE=251
+CONFIG_BT_BUF_CMD_TX_COUNT=2
+CONFIG_BT_BUF_EVT_RX_COUNT=12
+
+CONFIG_BT_LL_SOFTDEVICE=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_CENTRAL=y
+CONFIG_BT_CTLR_SDC_LLPM=y
+CONFIG_BT_CTLR_ADV_EXT=y
+CONFIG_BT_EXT_ADV=y
+CONFIG_BT_EXT_ADV_MAX_ADV_SET=3
+CONFIG_BT_CTLR_PHY_CODED=y
+CONFIG_BT_LL_SOFTDEVICE_MULTIROLE=y
+CONFIG_BT_CTLR_ADV_DATA_LEN_MAX=1650
+CONFIG_BT_MAX_CONN=4
+CONFIG_BT_CTLR_SDC_PERIPHERAL_COUNT=2
+CONFIG_BT_CTLR_ADV_PERIODIC=y
+CONFIG_BT_CTLR_SYNC_PERIODIC=y
+CONFIG_BT_CTLR_SYNC_PERIODIC_ADV_LIST_SIZE=8
+CONFIG_BT_CTLR_SDC_PERIODIC_SYNC_BUFFER_COUNT=10
+CONFIG_BT_PER_ADV=y
+CONFIG_BT_PER_ADV_SYNC=y
+CONFIG_BT_PER_ADV_SYNC_MAX=2
+CONFIG_BT_PER_ADV_SYNC_TRANSFER_SENDER=y
+CONFIG_BT_PER_ADV_SYNC_TRANSFER_RECEIVER=y
+
+CONFIG_BT_CTLR_SDC_PAWR_ADV=y
+CONFIG_BT_CTLR_SDC_PAWR_ADV_COUNT=1
+CONFIG_BT_CTLR_SDC_PERIODIC_ADV_RSP_TX_BUFFER_COUNT=5
+CONFIG_BT_CTLR_SDC_PERIODIC_ADV_RSP_RX_BUFFER_COUNT=10
+CONFIG_BT_CTLR_SDC_PERIODIC_ADV_RSP_TX_MAX_DATA_SIZE=249
+
+CONFIG_BT_CTLR_SDC_PAWR_SYNC=y
+CONFIG_BT_CTLR_SDC_PERIODIC_SYNC_RSP_TX_BUFFER_COUNT=5
+CONFIG_BT_CTLR_LE_POWER_CONTROL=y
+
+# save some space by not allocating a stack for ECDH
+CONFIG_BT_CTLR_ECDH_IN_MPSL_WORK=y
+
+# Save some flash
+CONFIG_GPIO=y
+CONFIG_BOOT_BANNER=y
+CONFIG_PRINTK=y
